# ADIOS2-addons

./: ADIOS_bp4.md  README.md  doc-metadata.md
Campaign/: README.md  campaign2mongodb.py  campaigns2mongodb.py  campaigns2sqlite.py  query.md  query_campaigns.py  query_mongodb.py  query_sqlite.py
Campaign/source/: addDerivedToGS.py
Checkpoint/: README.md  code_changes.md
DataStreaming/: README.md  SST_on_demand.md  dataman.md  perf.md  workflow-tau.md
DataStreaming/ADIOS_engines/: CMakeLists.txt  README.md  batch_inline_summit.sh  batch_ssc_summit.sh  batch_sst_summit.sh  dataSpacesReader.cpp  dataSpacesWriter.cpp  inlineReadWrite.cpp  sscReadWrite.cpp  sstReader.cpp  sstWriter.cpp
DataStreaming/ADIOS_engines_py/: batch_summit.sh  reader.py  writer.py
DataStreaming/ADIOS_ondemand/: CMakeLists.txt  README.md  sstReader.cpp  sstWriter.cpp
DataStreaming/XGC/: README.md  build-avocado.sh
DataStreaming/cpp_codes/: batch_all_summit.sh  inlineReadWrite.cpp  sstReader.cpp  sstWriter.cpp
DataStreaming/kokkos_code/: CMakeLists.txt  adios2.xml  sstReader.cpp  sstWriter.cpp
DataStreaming/performance/: CMakeLists.txt  README.md  dataManReader.cpp  dataSpacesReader.cpp  sscReadWrite.cpp  sstReader.cpp  sstWriter.cpp
DataStreaming/python_code/: README.md  adios.xml  batch_sst.erf  reader.py
ExpressionCalculator/: DerivedVariables.md  README.md  code_changes_BP.md  create_expression.cpp  math_parser.md
FileEngine/: CMakeLists.txt  README.md
FileEngine/campaign_example/: bpWriteRead.cpp
GPUAware/: BP5-Reader.md  BP5.md  GPU-logic.md  Kokkos.md  LayoutHandling.md  MGARD.md  README.md  build_mgard_cuda_summit.sh  submit_summit.sh
GPUAware/ADIOS.GDS/: code_changes.md
GPUAware/ADIOS.GDS/examples/kokkos_readwrite/: hello_kokkos.cpp
GPUAware/ADIOS.cuda/: BP5-Reader.md  BP5-Writer.md  Get_code_changes.md  Put_code_changes.md  README.md  code_changes.md
GPUAware/ADIOS.kokkos/: README.md  biuld-adios-kokkos-summit.sh  configure_kokkos.sh
GPUAware/ADIOS.kokkos/code/: README.md
GPUAware/benchmark/: CMakeLists.txt  GPUKernelPerf.cpp  MinMaxPerf.cpp  README.md  adiosDerivedPerf.cpp  readerKokkos1D.cpp  readerKokkos2D.cpp  writerKokkos1D.cpp  writerKokkos2D.cpp
GPUAware/code_example_cuda/: CMakeLists.txt  cudaADIOS2example.cpp  cudaRoutines.cu  cudaRoutines.h
GPUAware/code_fortran_kokkos/: CMakeLists.txt  README.md  adiosWriteRead.F90  view-cxx.cc  view-f.f90
GPUAware/code_torch/: benchmark.py
GPUAware/kokkos/: README.md  adios-view.md  code_changes.md  optimize.md
GPUAware/kokkos/code/: CMakeLists.txt  README.md  kokkosBP4.cpp
GPUAware/mgard/: CMakeLists.txt  README.md  build_adios_cuda_mgard.sh
GPUAware/operators/: MGARD.md  README.md  build_adios_cuda_mgard.sh  example_adios2_mgard.cu  zfp.md
GPUAware/performance/: README.md  perf.write.adios.csv
GPUAware/performance/gds_adios_write/: bpWriteRead.cpp
GPUAware/performance/gds_posix_readwrite/: hello_kokkos.cpp
GPUAware/performance/gds_posix_write/: cufile_sample_utils.h
GPUAware/reorganize_script/: README.md  Reorganize.cpp  Reorganize.h  main.cpp
GPUAware/tutorial/: README.md
GPUAware/warpx/: README.md  benchmark.md  openPMD.md
GPUStorage/: ADIOS.md  ADIOS_GPUcopy.md  Makefile  README.md  hello_cuda.cc
GPUStorage/adios/compile/: CMakeLists.txt
GPUStorage/adios/transport/: GPUdirect.cpp  GPUdirect.h
GPUStorage/adios_transport/: CMakeLists.txt  GPUdirect.cpp  GPUdirect.h
GPUStorage/cuda_adios/: CMakeLists.txt  bpWriteRead.cpp
GPUStorage/cuda_readwrite/: hello_cuda.cc
GPUStorage/examples/cuda_adios/internal/: CMakeLists.txt
GPUStorage/examples/kokkos_readwrite/: cufile_sample_utils.h
GPUStorage/kokkos_adios/: CMakeLists.txt  bpWriteRead.cpp  writePerformance.cpp
GPUStorage/kokkos_example/: Makefile  hello_kokkos.cpp
GPUStorage/kokkos_readwrite/: hello_kokkos.cpp
GPUStorage/performance/: README.md  perf.write.posix.csv
GPUStorage/performance/adios_kokkos/: CMakeLists.txt
GPUStorage/performance/posix_kokkos/: hello_kokkos.cpp
Serializer/: README.md
Tutorial/: ECP_compression.pptx  ECP_insitu.pptx  README.md  sc22.md  stree-test.md
Tutorial/GS-train/: README.md  infer-gs-img.py  infer-gs-param.py  train-gs-img.py  train-gs-param.py
applications/: Gray-Scott.md  README.md
applications/XGC/: build-xgc.sh  xgc-small-mpmd.yaml  xgc-small-separate.yaml
applications/gray-scott/: README.md  main.cpp
